# multi-robot-exploration-rl

./: README.md
install/: local_setup.sh  setup.sh
install/start_reinforcement_learning/lib/start_reinforcement_learning/: run_maddpg
install/start_reinforcement_learning/share/start_reinforcement_learning/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/start_rl_environment/share/start_rl_environment/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/start_rl_environment/share/start_rl_environment/cmake/: start_rl_environmentConfig-version.cmake  start_rl_environmentConfig.cmake
install/start_rl_environment/share/start_rl_environment/description/: gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
install/start_rl_environment/share/start_rl_environment/environment/: path.dsv  (+1 more)
log/: latest_build
src/start_reinforcement_learning/: package.xml
src/start_reinforcement_learning/start_reinforcement_learning/: maddpg_main.py
src/start_reinforcement_learning/start_reinforcement_learning/env_logic/: logic.py  restart_environment.py
src/start_reinforcement_learning/start_reinforcement_learning/maddpg_algorithm/: agent.py  buffer.py  maddpg.py  main.py  networks.py
src/start_rl_environment/: package.xml
src/start_rl_environment/description/: lidar.xacro  robot_core.xacro
src/start_rl_environment/launch/: start_robots.launch.py
src/start_rl_environment/worlds/: map1.world
(+24 files in other folders)
